--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -59,6 +59,11 @@
         "xstring": "cpp",
         "xtr1common": "cpp",
         "xutility": "cpp",
-        "stack": "cpp"
+        "stack": "cpp",
+        "fstream": "cpp",
+        "list": "cpp",
+        "string": "cpp",
+        "unordered_map": "cpp",
+        "xhash": "cpp"
     }
 }
