--- a/bin/Makefile
+++ b/bin/Makefile
@@ -1,3 +1,3 @@
 all:
 
-	g++ -g --std=c++17 -I../include -L../lib ../src/main2.cpp ../src/glad.c -lglfw3dll -o main2
+	g++ -g --std=c++17 -I../include -L../lib ../src/tsp.cpp ../src/glad.c  -lopengl32 -lglfw3dll -o tsp
